--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -4,6 +4,8 @@ DashboardScreen As screen:
         Set(VarAllLeads,false);
         Set(VarPopUpIncentivesCalculation,false);
         Set(VarPopUpSyncData,false);
+        Set(VarReportIssue,false);
+        Set(VarPopupReportIssue,false);
 
     ctnmainDS As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
@@ -556,6 +558,7 @@ DashboardScreen As screen:
                 AlignInContainer: =AlignInContainer.Start
                 Fill: =Header.SHRed
                 HoverFill: =
+                OnSelect: =Set(VarReportIssue,true)
                 Text: ="Report Issue"
                 ZIndex: =1
 
@@ -789,4 +792,222 @@ DashboardScreen As screen:
             X: =(Parent.Width-Self.Width)/2
             Y: =imginfoDS.Y+ imginfoDS.Height+2
             ZIndex: =12
+
+    ReportIssueGroup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =20
+
+        Rectangle1_5 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarReportIssue
+            Width: =Parent.Width
+            ZIndex: =13
+
+        Rectangle5_5 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =405
+            Visible: =VarReportIssue
+            Width: =700
+            X: =(Parent.Width -Self.Width)/2
+            Y: =(Parent.Height - Self.Height)/2
+            ZIndex: =14
+
+        Container38_5 As groupContainer.horizontalAutoLayoutContainer:
+            Height: =50
+            LayoutMode: =LayoutMode.Auto
+            Visible: =VarReportIssue
+            Width: =Rectangle5_5.Width
+            X: =Rectangle5_5.X
+            Y: =Rectangle5_5.Y+10
+            ZIndex: =15
+
+            Label41_5 As label:
+                FontWeight: =FontWeight.Semibold
+                PaddingLeft: =40
+                Text: ="Add issue description "
+                Width: =Parent.Width-70
+                ZIndex: =1
+
+            Icon2_5 As icon.Cancel:
+                Color: =RGBA(153, 153, 153, 1)
+                Height: =35
+                Icon: =Icon.Cancel
+                OnSelect: |-
+                    =Set(VarReportIssue,false);
+                    Reset(TextInput2_7);
+                Width: =30
+                ZIndex: =2
+
+        Rectangle6_5 As rectangle:
+            BorderColor: =RGBA(179, 179, 179, 1)
+            BorderThickness: =2
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =250
+            Visible: =VarReportIssue
+            Width: =656
+            X: =Rectangle5_5.X+20
+            Y: =Container38_5.Y+Container38_5.Height +10
+            ZIndex: =16
+
+        Icon4_5 As icon.Add:
+            Color: =RGBA(179, 179, 179, 1)
+            Fill: =RGBA(179, 179, 179, 1)
+            Height: =2
+            Icon: =Icon.HorizontalLine
+            Visible: =VarReportIssue
+            Width: =Rectangle6_5.Width
+            X: =Rectangle6_5.X
+            Y: =Rectangle6_5.Y +Rectangle6_5.Height+10
+            ZIndex: =17
+
+        Button11_6 As button:
+            BorderThickness: =0
+            DisabledFill: =RGBA(237, 237, 237, 1)
+            DisplayMode: |-
+                =If(
+                    Connection.Connected,
+                    DisplayMode.Edit,
+                    DisplayMode.Disabled
+                )
+            Fill: =Header.SHRed
+            FocusedBorderThickness: =
+            HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+            OnSelect: |-
+                =If(
+                    IsBlank(TextInput2_7.Text),
+                    Notify(
+                        "Please enter your issue description.",
+                        NotificationType.Warning
+                    );
+                    ,
+                    Set(
+                        VarReportGUID,
+                        Text(GUID())
+                    );
+                    Patch(
+                        ReportIssues,
+                        Defaults(ReportIssues),
+                        {
+                            ID: VarReportGUID,
+                            ReportedBy: User().Email,
+                            IssueDescription: TextInput2_7.Text,
+                            Sender: "QQ Team Member"
+                        }
+                    );
+                    If(
+                        (!IsEmpty(Errors(ReportIssues))),
+                        Notify(
+                            "ReportIssue Patch function Error -- " & Concat(
+                                Errors(ReportIssues),
+                                Column & ": " & Message
+                            ),
+                            NotificationType.Error
+                        );
+                        ,
+                        Set(
+                            VarReportIssue,
+                            false
+                        );
+                        Reset(TextInput2_7);
+                        Set(
+                            VarPopupReportIssue,
+                            true
+                        );
+                    );
+                    
+                )
+            PressedColor: =Self.Color
+            PressedFill: =Self.Fill
+            Text: ="Submit"
+            Visible: =VarReportIssue
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Icon4_5.Y+20
+            ZIndex: =18
+
+        TextInput2_7 As text:
+            BorderThickness: =0
+            Default: =
+            Fill: =RGBA(255,255,255,1)
+            FocusedBorderColor: =RGBA(179, 179, 179, 1)
+            FocusedBorderThickness: =2
+            Height: =Rectangle6_5.Height
+            HintText: ="Enter issue description..."
+            HoverBorderColor: =RGBA(179, 179, 179, 1)
+            HoverFill: =RGBA(0, 0, 0, 0)
+            Mode: =TextMode.MultiLine
+            PressedBorderColor: =RGBA(179, 179, 179, 1)
+            Size: =14
+            Visible: =VarReportIssue
+            Width: =Rectangle6_5.Width
+            X: =Rectangle6_5.X
+            Y: =Rectangle6_5.Y
+            ZIndex: =19
+
+    GrpPopupReportIssue As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =25
+
+        iconOuterRectangleDS_1 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarPopupReportIssue
+            Width: =Parent.Width
+            ZIndex: =20
+
+        iconInnerRectsngleDS_1 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =270
+            Visible: =VarPopupReportIssue
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Parent.Height/3
+            ZIndex: =21
+
+        imgInfoDS_1 As image:
+            Height: =52
+            Image: =Success
+            Visible: =VarPopupReportIssue
+            Width: =52
+            X: =(Parent.Width-Self.Width)/2
+            Y: =iconInnerRectsngleDS_1.Y+20
+            ZIndex: =22
+
+        LblTextDS_1 As label:
+            Align: =Align.Center
+            Font: =
+            FontWeight: =FontWeight.Semibold
+            Height: =100
+            Size: =15
+            Text: ="Report issue submitted successfully."
+            Visible: =VarPopupReportIssue
+            Width: =350
+            X: =(Parent.Width-Self.Width)/2
+            Y: =imgInfoDS_1.Y+imgInfoDS_1.Height
+            ZIndex: =23
+
+        btnSuccessDS_1 As button:
+            Fill: =RGBA(54, 176, 75, 1)
+            Font: ="Roboto"
+            HoverFill: =RGBA(75, 125, 6, 1)
+            OnSelect: |+
+                =Set(
+                    VarPopupReportIssue,
+                    false
+                );
+                
+            PressedBorderColor: =RGBA(1, 43, 1, 0)
+            PressedFill: =Self.Fill
+            Text: ="Ok"
+            Visible: =VarPopupReportIssue
+            Width: =120
+            X: =(Parent.Width-Self.Width)/2
+            Y: =LblTextDS_1.Y+ LblTextDS_1.Height+5
+            ZIndex: =24
 
