--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -246,6 +246,14 @@ SupportScreen As screen:
                     Y: =btnSupportSS_2.Height+btnSupportSS_2.Y+10
                     ZIndex: =4
 
+                Button2 As button:
+                    AlignInContainer: =AlignInContainer.Start
+                    Fill: =Header.HUserColor
+                    HoverFill: =
+                    OnSelect: =Set(VarReportIssue,true)
+                    Text: ="Report Issue"
+                    ZIndex: =5
+
                 btnSupportSS_3 As button:
                     Align: =Align.Left
                     Color: =RGBA(0, 0, 0, 1)
@@ -263,7 +271,7 @@ SupportScreen As screen:
                     Width: =Parent.Width-20
                     X: =10
                     Y: =lblSupportSS_2.Y+lblSupportSS_2.Height+10
-                    ZIndex: =5
+                    ZIndex: =6
 
                 lblSupportSS_3 As label:
                     AutoHeight: =true
@@ -280,7 +288,7 @@ SupportScreen As screen:
                     Width: =Parent.Width-20
                     X: =10
                     Y: =btnSupportSS_3.Height+btnSupportSS_3.Y+10
-                    ZIndex: =6
+                    ZIndex: =7
 
     grpMenuCS_3 As group:
         Height: =5
@@ -367,4 +375,158 @@ SupportScreen As screen:
                     Width: =4
                     X: =1
                     ZIndex: =5
+
+    ReportIssueGroup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =11
+
+        Rectangle1_5 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarReportIssue
+            Width: =Parent.Width
+            ZIndex: =4
+
+        Rectangle5_5 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =405
+            Visible: =VarReportIssue
+            Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
+            X: =(Parent.Width -Self.Width)/2
+            Y: =(Parent.Height - Self.Height)/2
+            ZIndex: =5
+
+        Container38_5 As groupContainer.horizontalAutoLayoutContainer:
+            Height: =50
+            LayoutMode: =LayoutMode.Auto
+            Visible: =VarReportIssue
+            Width: =Rectangle5_5.Width
+            X: =Rectangle5_5.X
+            Y: =Rectangle5_5.Y+10
+            ZIndex: =6
+
+            Label41_5 As label:
+                FontWeight: =FontWeight.Semibold
+                PaddingLeft: =40
+                Text: ="Add issue description "
+                Width: =Parent.Width-60
+                ZIndex: =1
+
+            Icon2_5 As icon.Cancel:
+                Color: =RGBA(153, 153, 153, 1)
+                Height: =35
+                Icon: =Icon.Cancel
+                OnSelect: |-
+                    =Set(VarReportIssue,false);
+                    Reset(TextInput2_7);
+                Width: =30
+                ZIndex: =2
+
+        Rectangle6_5 As rectangle:
+            BorderColor: =RGBA(179, 179, 179, 1)
+            BorderThickness: =2
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =250
+            Visible: =VarReportIssue
+            Width: =If(Parent.Width<1000,Parent.Width/1.2 - 40,Parent.Width/2 - 40)
+            X: =Rectangle5_5.X +20
+            Y: =Container38_5.Y+Container38_5.Height +10
+            ZIndex: =7
+
+        Icon4_5 As icon.Add:
+            Color: =RGBA(179, 179, 179, 1)
+            Fill: =RGBA(179, 179, 179, 1)
+            Height: =2
+            Icon: =Icon.HorizontalLine
+            Visible: =VarReportIssue
+            Width: =Rectangle6_5.Width
+            X: =Rectangle6_5.X
+            Y: =Rectangle6_5.Y +Rectangle6_5.Height+10
+            ZIndex: =8
+
+        Button11_6 As button:
+            BorderThickness: =0
+            DisabledFill: =RGBA(237, 237, 237, 1)
+            DisplayMode: |-
+                =If(
+                    Connection.Connected,
+                    DisplayMode.Edit,
+                    DisplayMode.Disabled
+                )
+            Fill: =AllScreensCSS.RActiveColor
+            FocusedBorderThickness: =
+            HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+            OnSelect: |-
+                =If(
+                    IsBlank(TextInput2_7.Text),
+                    Notify(
+                        "Please enter your issue description.",
+                        NotificationType.Warning
+                    );
+                    ,
+                    Set(
+                        VarReportGUID,
+                        Text(GUID())
+                    );
+                    Patch(
+                        ReportIssues,
+                        Defaults(ReportIssues),
+                        {
+                            ID: VarReportGUID,
+                            ReportedBy: User().Email,
+                            IssueDescription: TextInput2_7.Text,
+                            Sender: "QQ Team Member"
+                        }
+                    );
+                    If(
+                        (!IsEmpty(Errors(ReportIssues))),
+                        Notify(
+                            "ReportIssue Patch function Error -- " & Concat(
+                                Errors(ReportIssues),
+                                Column & ": " & Message
+                            ),
+                            NotificationType.Error
+                        );
+                        ,
+                        Set(
+                            VarReportIssue,
+                            false
+                        );
+                        Reset(TextInput2_7);
+                        Set(
+                            VarPopupReportIssue,
+                            true
+                        );
+                    );
+                    
+                )
+            PressedColor: =Self.Color
+            PressedFill: =Self.Fill
+            Text: ="Submit"
+            Visible: =VarReportIssue
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Icon4_5.Y+20
+            ZIndex: =9
+
+        TextInput2_7 As text:
+            BorderThickness: =0
+            Default: =
+            Fill: =RGBA(255,255,255,1)
+            FocusedBorderColor: =RGBA(179, 179, 179, 1)
+            FocusedBorderThickness: =2
+            Height: =Rectangle6_5.Height
+            HintText: ="Enter issue description..."
+            HoverBorderColor: =RGBA(179, 179, 179, 1)
+            HoverFill: =RGBA(0, 0, 0, 0)
+            Mode: =TextMode.MultiLine
+            PressedBorderColor: =RGBA(179, 179, 179, 1)
+            Size: =14
+            Visible: =VarReportIssue
+            Width: =Rectangle6_5.Width
+            X: =Rectangle6_5.X
+            Y: =Rectangle6_5.Y
+            ZIndex: =10
 
