--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -35,6 +35,7 @@
       "disableruntimepolicies": false,
       "dynamicschema": false,
       "enableappembeddingux": false,
+      "enablecanvasappruntimecopilot": false,
       "enablechatbotfeature": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
@@ -121,7 +122,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "24604168-8023-46a0-bd71-111aba1a97f3",
+    "AppName": "QQ Team App",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
