--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -800,14 +800,14 @@ DashboardScreen As screen:
         Y: =40
         ZIndex: =20
 
-        Rectangle1_5 As rectangle:
+        rectfullIssuedescriptionDS As rectangle:
             Fill: =RGBA(0, 0, 0, 0.29)
             Height: =Parent.Height
             Visible: =VarReportIssue
             Width: =Parent.Width
             ZIndex: =13
 
-        Rectangle5_5 As rectangle:
+        rectIssuedescriptionpopupDS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =405
             Visible: =VarReportIssue
@@ -816,23 +816,23 @@ DashboardScreen As screen:
             Y: =(Parent.Height - Self.Height)/2
             ZIndex: =14
 
-        Container38_5 As groupContainer.horizontalAutoLayoutContainer:
+        ctnlblicnIssuedescriptionDS As groupContainer.horizontalAutoLayoutContainer:
             Height: =50
             LayoutMode: =LayoutMode.Auto
             Visible: =VarReportIssue
-            Width: =Rectangle5_5.Width
-            X: =Rectangle5_5.X
-            Y: =Rectangle5_5.Y+10
+            Width: =rectIssuedescriptionpopupDS.Width
+            X: =rectIssuedescriptionpopupDS.X
+            Y: =rectIssuedescriptionpopupDS.Y+10
             ZIndex: =15
 
-            Label41_5 As label:
+            lblIssuedescriptionDS As label:
                 FontWeight: =FontWeight.Semibold
                 PaddingLeft: =20
                 Text: ="Add issue description "
                 Width: =Parent.Width-70
                 ZIndex: =1
 
-            Icon2_5 As icon.Cancel:
+            icncloseIssuedescriptionDS As icon.Cancel:
                 Color: =RGBA(153, 153, 153, 1)
                 Height: =35
                 Icon: =Icon.Cancel
@@ -842,29 +842,29 @@ DashboardScreen As screen:
                 Width: =30
                 ZIndex: =2
 
-        Rectangle6_5 As rectangle:
+        recttxtbxIssuedescriptionDS As rectangle:
             BorderColor: =RGBA(179, 179, 179, 1)
             BorderThickness: =2
             Fill: =RGBA(255, 255, 255, 1)
             Height: =250
             Visible: =VarReportIssue
             Width: =656
-            X: =Rectangle5_5.X+20
-            Y: =Container38_5.Y+Container38_5.Height +10
+            X: =rectIssuedescriptionpopupDS.X+20
+            Y: =ctnlblicnIssuedescriptionDS.Y+ctnlblicnIssuedescriptionDS.Height +10
             ZIndex: =16
 
-        Icon4_5 As icon.Add:
+        icnlineIssuedescriptionDS As icon.Add:
             Color: =RGBA(179, 179, 179, 1)
             Fill: =RGBA(179, 179, 179, 1)
             Height: =2
             Icon: =Icon.HorizontalLine
             Visible: =VarReportIssue
-            Width: =Rectangle6_5.Width
-            X: =Rectangle6_5.X
-            Y: =Rectangle6_5.Y +Rectangle6_5.Height+10
+            Width: =recttxtbxIssuedescriptionDS.Width
+            X: =recttxtbxIssuedescriptionDS.X
+            Y: =recttxtbxIssuedescriptionDS.Y +recttxtbxIssuedescriptionDS.Height+10
             ZIndex: =17
 
-        Button11_6 As button:
+        btnIssuedescriptionDS As button:
             BorderThickness: =0
             DisabledFill: =RGBA(237, 237, 237, 1)
             DisplayMode: |-
@@ -930,7 +930,7 @@ DashboardScreen As screen:
             Text: ="Submit"
             Visible: =VarReportIssue
             X: =(Parent.Width-Self.Width)/2
-            Y: =Icon4_5.Y+20
+            Y: =icnlineIssuedescriptionDS.Y+20
             ZIndex: =18
 
         txtiptIssuedescriptionDS As text:
@@ -939,7 +939,7 @@ DashboardScreen As screen:
             Fill: =RGBA(255,255,255,1)
             FocusedBorderColor: =RGBA(179, 179, 179, 1)
             FocusedBorderThickness: =2
-            Height: =Rectangle6_5.Height
+            Height: =recttxtbxIssuedescriptionDS.Height
             HintText: ="Enter issue description..."
             HoverBorderColor: =RGBA(179, 179, 179, 1)
             HoverFill: =RGBA(0, 0, 0, 0)
@@ -947,9 +947,9 @@ DashboardScreen As screen:
             PressedBorderColor: =RGBA(179, 179, 179, 1)
             Size: =14
             Visible: =VarReportIssue
-            Width: =Rectangle6_5.Width
-            X: =Rectangle6_5.X
-            Y: =Rectangle6_5.Y
+            Width: =recttxtbxIssuedescriptionDS.Width
+            X: =recttxtbxIssuedescriptionDS.X
+            Y: =recttxtbxIssuedescriptionDS.Y
             ZIndex: =19
 
     GrpPopupReportIssue As group:
