--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -584,9 +584,9 @@ LeadScreen As screen:
                     Fill: =RGBA(54, 176, 75, 1)
                     Height: =60
                     HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                    OnSelect: |
+                    OnSelect: |-
                         =//here checking estimate number is entered or not
-                        If(
+                        /*If(
                             IsBlank(txtinptestimatenumber.Text),
                             Notify(
                                 "Please enter estimate number.",
@@ -601,6 +601,7 @@ LeadScreen As screen:
                                 true
                             )
                         );
+                        
                         //here checking if estimate number is entered then open confirmation popup
                         If(
                             FlagEstimateNumberEntered = true,
@@ -615,6 +616,17 @@ LeadScreen As screen:
                             );
                             
                         );
+                        */
+                        
+                            If(
+                            IsBlank(txtinptestimatenumber.Text),
+                            Set(VarMsgEstimateNumber,"Do you want to enter blank estimate number, please confirm it.");,
+                            Set(VarMsgEstimateNumber,"Do you want to enter estimate number "& txtinptestimatenumber.Text & ", please confirm it.");
+                        );
+                        Set(
+                                VarPopUpEstimateNumber,
+                                true
+                            );
                     Text: ="Submit Estimate Number"
                     Width: =300
                     X: =410
@@ -1661,7 +1673,7 @@ LeadScreen As screen:
             FontWeight: =FontWeight.Bold
             Height: =110
             Size: =15
-            Text: ="Do you want to enter estimate number "& txtinptestimatenumber.Text & ", please confirm it."
+            Text: =VarMsgEstimateNumber //"Do you want to enter estimate number "& txtinptestimatenumber.Text & ", please confirm it."
             Visible: =VarPopUpEstimateNumber
             Width: =350
             X: =(Parent.Width-Self.Width)/2
@@ -1745,7 +1757,15 @@ LeadScreen As screen:
                 //estimatenumber entered if close
                 If(
                     FlagEstimateNumberFound = false,
-                //If Estimate number is not found in FP Estimate file then we are storing estimate nummber only.
+                    If(IsBlank(txtinptestimatenumber.Text),Set(
+                        VarPopUpEstimateNumberSubmittedmsg,
+                        "Blank Estimate Number is saved."
+                    );
+                    Set(
+                        VarPopUpEstimateNumberSubmitted,
+                        true
+                    );,
+                    //If Estimate number is not found in FP Estimate file then we are storing estimate nummber only.
                     UpdateIf(
                         LeadInformations,
                         ID = VarSelectedLead.ID,
@@ -1760,7 +1780,8 @@ LeadScreen As screen:
                         true
                     );
                     
-                );
+                ););
+                
                 //here checking FlagEstimateNumberWithTechIdFound is true then update estimate number,leadprice,leadincentive
                 If(
                     FlagEstimateNumberWithTechIdFound = true && FlagEstimateNumberFound = true,
